improve html's head

--- a/index.html
+++ b/index.html
@@ -5,16 +5,19 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="icon" href="resources/favicon.ico" type="image/x-icon" sizes="96x96" />
-  
+  <link rel="preload" href="./resources/Done_ring_round_fill.svg" as="image" type="image/svg+xml">
+
   <!-- Optimización de fuentes -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  
-  <!-- Carga eficiente de ambas fuentes con onload + media="print" -->
-  <link href="https://fonts.googleapis.com/css2?family=Sora&family=Poppins&display=swap"
-        rel="stylesheet" media="print" onload="this.media='all'">
-  
+
+  <!-- Carga eficiente de ambas fuentes -->
+  <link href="https://fonts.googleapis.com/css2?family=Sora&family=Poppins&display=swap" rel="stylesheet" media="print"
+    onload="this.media='all'">
+
   <link rel="stylesheet" href="styles.css">
+  <meta name="description"
+    content="Página de testimonios con diseño limpio y responsive. Ideal para mostrar reseñas de usuarios y su experiencia.">
   <title>Testimonial Page | devChallenges.io</title>
 </head>
 
@@ -32,30 +35,32 @@
       <li>Checklist for Editors, Reviewers, and Authors of SPIE Journals</li>
     </ul>
   </section>
+
   <section class="cards">
     <div class="card" id="google-card">
       <div class="brand">
-        <img src="./resources/google-testimonial.svg" alt="google" id="logo">
+        <img src="./resources/google-testimonial.svg" alt="google" id="logo" width="100" height="32">
         <div>
-          <img src="./resources/Star_fill.svg" alt="star">
-          <img src="./resources/Star_fill.svg" alt="star">
-          <img src="./resources/Star_fill.svg" alt="star">
-          <img src="./resources/Star_fill.svg" alt="star">
-          <img src="./resources/Star_fill_gray.svg" alt="no star">
+          <img src="./resources/Star_fill.svg" alt="star" width="20" height="20">
+          <img src="./resources/Star_fill.svg" alt="star" width="20" height="20">
+          <img src="./resources/Star_fill.svg" alt="star" width="20" height="20">
+          <img src="./resources/Star_fill.svg" alt="star" width="20" height="20">
+          <img src="./resources/Star_fill_gray.svg" alt="no star" width="20" height="20">
         </div>
       </div>
-      <h3>Samantha Lee</h3>
+      <h2>Samantha Lee</h2>
       <p>The checklist ensures that the review process is thorough</p>
     </div>
+
     <div class="card" id="meta-card">
       <div class="brand">
-        <img src="./resources/meta-testimonial.svg" alt="meta" id="logo">
+        <img src="./resources/meta-testimonial.svg" alt="meta" id="logo" width="100" height="32">
         <div>
-          <img src="./resources/Star_fill.svg" alt="star">
-          <img src="./resources/Star_fill.svg" alt="star">
-          <img src="./resources/Star_fill.svg" alt="star">
-          <img src="./resources/Star_fill.svg" alt="star">
-          <img src="./resources/Star_fill.svg" alt="star">
+          <img src="./resources/Star_fill.svg" alt="star" width="20" height="20">
+          <img src="./resources/Star_fill.svg" alt="star" width="20" height="20">
+          <img src="./resources/Star_fill.svg" alt="star" width="20" height="20">
+          <img src="./resources/Star_fill.svg" alt="star" width="20" height="20">
+          <img src="./resources/Star_fill.svg" alt="star" width="20" height="20">
         </div>
       </div>
       <h3>Rachel Patel</h3>
